--- a/Página Inicial.html
+++ b/Página Inicial.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1> Este arquivo é um teste inicial</h1>
-    <h1> Este arquivo de teste foi modificado</h1>h1
+    <h1> Este arquivo de teste foi modificado</h1>
+    <h1> Alteração a ser realizada</h1>h1>
 </body>
 </html>
